--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: DanStem2019
 description: DanStem Retreat 2019
 keywords: DanStem
-baseurl:  /Jalpc # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
+#baseurl:  /Jalpc # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
 url: https://danstem2019.github.io/index.html  # url should be 'http://<github_username>.github.io/homepage' as before
 img_path: /Jalpc/static/assets/img/blog  # url should be '/homepage/static/assets/img/blog' as before
 
